# ChangeLog for dev-ruby/ruby-gdkpixbuf2
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gdkpixbuf2/ChangeLog,v 1.43 2008/05/21 12:55:17 drac Exp $

  09 Jan 2009; Mark Somerville <gentoo-ruby@scottishclimbs.com>
  +ruby-gdkpixbuf2-0.18.1-r1.ebuild:
  Removed rubyee and dropped keywords to testing.

  18 Dec 2008; Mark Somerville <gentoo-ruby@scottishclimbs.com>
  +metadata.xml,
  +ruby-gdkpixbuf2-0.18.1.ebuild:
  Added ebuild for 0.18.1.

  21 May 2008; Samuli Suominen <drac@gentoo.org>
  ruby-gdkpixbuf2-0.16.0.ebuild:
  Move pkgconfig to DEPEND.

  06 Apr 2008; Hans de Graaff <graaff@gentoo.org>
  ruby-gdkpixbuf2-0.16.0.ebuild:
  Add missing pkgconfig dependency, fixing #216383

  28 Mar 2008; Hans de Graaff <graaff@gentoo.org>
  ruby-gdkpixbuf2-0.16.0.ebuild:
  Mark stable on amd64

  28 Mar 2008; Hans de Graaff <graaff@gentoo.org>
  -files/ruby-gdkpixbuf2-0.11.0-fix-includes.patch,
  -ruby-gdkpixbuf2-0.14.1.ebuild, -ruby-gdkpixbuf2-0.15.0.ebuild:
  Remove old versions

  24 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  ruby-gdkpixbuf2-0.16.0.ebuild:
  alpha/x86 stable

  21 Apr 2007; Raúl Porcel <armin76@gentoo.org>
  ruby-gdkpixbuf2-0.16.0.ebuild:
  ia64 stable

  12 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  ruby-gdkpixbuf2-0.16.0.ebuild:
  Stable on sparc

  03 Mar 2007; nixnut <nixnut@gentoo.org> ruby-gdkpixbuf2-0.16.0.ebuild:
  Stable on ppc wrt bug 169064

  30 Dec 2006; Luis Medinas <metalgod@gentoo.org>
  ruby-gdkpixbuf2-0.14.1.ebuild:
  Stable on amd64 and x86.

*ruby-gdkpixbuf2-0.16.0 (30 Dec 2006)

  30 Dec 2006; Luis Medinas <metalgod@gentoo.org>
  -ruby-gdkpixbuf2-0.10.1.ebuild, -ruby-gdkpixbuf2-0.11.0.ebuild,
  -ruby-gdkpixbuf2-0.12.0.ebuild, +ruby-gdkpixbuf2-0.16.0.ebuild:
  Version Bump. Remove older versions.

  20 Oct 2006; Aron Griffis <agriffis@gentoo.org>
  ruby-gdkpixbuf2-0.14.1.ebuild:
  Mark 0.14.1 stable on alpha
