@@ -1,14 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gdkpixbuf2/ruby-gdkpixbuf2-0.16.0.ebuild,v 1.8 2008/05/21 12:55:17 drac Exp $
-
-inherit ruby ruby-gnome2
-
-DESCRIPTION="Ruby GdkPixbuf2 bindings"
-KEYWORDS="alpha amd64 ia64 ppc sparc x86"
-IUSE=""
-USE_RUBY="ruby18 rubyee"
-RDEPEND=">=dev-ruby/ruby-glib2-${PV}
-	>=x11-libs/gtk+-2"
-DEPEND="${RDEPEND}
-	dev-util/pkgconfig"
